WEB-2363 Moved score value and fixed alignment issues

--- a/fid-web/src/main/webapp/style/newCss/event/event_show.css
+++ b/fid-web/src/main/webapp/style/newCss/event/event_show.css
@@ -30,3 +30,13 @@
 .passColor p{
 	background-color:#DBF1BA;
 }
+
+.eventView p span{
+	padding: 5px 0;
+	float: left;
+	display: block;
+}
+
+.eventView .scoreContainer span{
+	padding-left: 25px;
+}
